# static_file_serving

./: .gitignore  Cargo.toml
src/: main.rs
